--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,20 @@
 <resources>
     <string name="app_name">estevez_ivan_ex3tDist</string>
-    <string name="tictactoe">Tres en raya</string>
-    <string name="first_item">First item</string>
-    <string name="second_item">Second item</string>
-    <string name="third_item">Third item</string>
-    <string name="winner">Ganador</string>
-    <string name="calculator">Calculadora</string>
-    <string name="ej01_button">Ejercicio 1</string>
-    <string name="ej02_button">Ejercicio 2</string>
-    <string name="ej03_button">Ejercicio 3</string>
-    <string name="title">Contadores</string>
-    <string name="addItem">Añadir</string>
-    <string name="incremento">Sumar</string>
-    <string name="decremento">Restar</string>
-    <string name="close">Cerrar</string>
-    <string name="global">Global: </string>
-    <string name="removeAll">Eliminar todos</string>
-    <string name="show">Mostrar</string>
-    <string name="numeroContadores">Número de contadores</string>
+    <string name="ej01_button">Registro clientes</string>
+    <string name="ej02_button">Gestión clientes</string>
+    <string name="listado_de_clientes">Listado de clientes</string>
+    <string name="borrar">Borrar</string>
+    <string name="nombre_de_usuario">Nombre de usuario</string>
+    <string name="mail">Mail</string>
+    <string name="contrase_a">Contraseña</string>
+    <string name="repetir_contrase_a">Repetir contraseña</string>
+    <string name="sign_in">Sign in</string>
+    <string name="registro">Registro</string>
+    <string name="clientes">"Clientes: "</string>
+    <string name="el_nombre_de_usuario_y_o_email_ya_est_n_en_uso">El nombre de usuario y/o email ya están en uso</string>
+    <string name="ok">OK</string>
+    <string name="usuario_registrado_correctamente">Usuario registrado correctamente</string>
+    <string name="cerrar">Cerrar</string>
+    <string name="mostrar_contrase_a">Mostrar contraseña</string>
+    <string name="a_adir">Añadir</string>
 </resources>
